erDiagram
    USER_PROFILE ||--o{ DAY : "usa"
    DAY ||--o{ DAY_HABIT : "registra"
    HABIT ||--o{ DAY_HABIT : "incluye"

    USER_PROFILE {
      INTEGER id PK
      TEXT name
      TEXT goal
      DATETIME created_at
    }

    HABIT {
      TEXT key PK
      TEXT title
      INTEGER is_active "0/1"
    }

    DAY {
      TEXT day_date PK "YYYY-MM-DD"
    }

    DAY_HABIT {
      TEXT day_date FK
      TEXT habit_key FK
      INTEGER done "0/1"
      UNIQUE day_date, habit_key
    }
